<resources>
    <string name="app_name">Smart Anti Breach</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Registration</string>
    <string name="change_password">Generate OTP</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">Enter OTP</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered  now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Send</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_main_geofence">Geofence Maps</string>
    <string name="btn_locker_geofencemain">Geofence Maps</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_act_try">TabbedActTry</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="action_delete_all">Delete All Geofences</string>
    <string name="btn_geofence_data">Manage Geofences</string>
  <!-- Dialogs -->
  <string name="AreYouSure">Are you sure?</string>
  <string name="Yes">Yes</string>
  <string name="No">No</string>
  <string name="Add">Add</string>
  <string name="Cancel">Cancel</string>

  <!-- Button -->
  <string name="Button.DeleteGeofence">DELETE</string>

  <!-- Labels -->
  <string name="Label.Name">Name</string>
  <string name="Label.Latitude">Latitude</string>
  <string name="Label.Longitude">Longitude</string>
  <string name="Label.Radius">Radius</string>
  <string name="Label.AddGeofence">Add a Geofence</string>
  <string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

  <!-- Hints -->
  <string name="Hint.Name">Name for the geofence</string>
  <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
  <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
  <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>
  <string name="what_s_on_your_mind">Enter your query</string>
  <!-- Units -->
  <string name="Units.Degrees">\u00B0</string>
  <string name="Units.Kilometers">km</string>

  <!-- Notification -->
  <string name="Notification.Title">GeoFence Notification</string>
  <string name="Notification.Text">We\'re at %1$s!!!</string>

  <!-- Toast -->
  <string name="Toast.Validation">Please enter valid data for all fields</string>
  <string name="Toast.Error">There was an error. Please try again.</string>
    <string name="app_title">Smart Anti Breach</string>
    <string name="btn_locker_data">LOCK/UNLOCK LOCKER</string>
    <string name="btn_locker_history">Locker Status History</string>
    <string name="lat">Lat:</string>
    <string name="clr">Clear Geofence</string>
    <string name="create">Create Geofence</string>
    <string name="longer">Long:</string>


</resources>
